[#51] ♻️ refactor : 댓글 목록 조회 시 유저 프로필 이미지 포함하도록 로직 개선 -getCommentsWithUserProfileImageByBoard() 사용하여 엔티티 조회 후 DTO 변환